# auto-eda-report

./: .gitignore  README.md  eda_report.html  pyproject.toml  test_report.py
custom_eda/: correlations.py  html_report.py  plots.py  reporting.py  summaries.py  time_series.py
tests/: test_correlations.py  test_summaries.py
