[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-eda-report"
version = "0.1.0"
description = "A reusable Python utility for exploratory data analysis and HTML reporting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy"
    "plotly"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_eda*"]